Better Error page messages/code

--- a/Onyx/Onyx.Cartographer/Content/pages/_home.scss
+++ b/Onyx/Onyx.Cartographer/Content/pages/_home.scss
@@ -94,7 +94,14 @@
 						color: #ebebeb;
 
 						strong {
-						font-size: 70px;
+							font-size: 70px;
+						}
+
+						.sub {
+							font-size: 16px;
+							color: #444;
+							font-weight: 600;
+							margin-top: 20px;
 						}
 
 						hr {
