--- a/Onyx/Onyx.Cartographer/Views/Error/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Error/Index.cshtml
@@ -6,5 +6,5 @@
 
 <strong>@Model.HttpStatusCode.ToString()</strong>
 <hr />
-@Model.HttpStatusMessage
+@Model.HttpStatusMessagePpl
 <!-- @Model.HttpStatusMessageHeh -->
