--- a/Onyx/Onyx.Cartographer/Content/application.css
+++ b/Onyx/Onyx.Cartographer/Content/application.css
@@ -271,6 +271,12 @@ body {
 .layoutWrapper > .alertPage .innerWrapper .wrapper .content .primaryContent .header strong {
   font-size: 70px;
 }
+.layoutWrapper > .alertPage .innerWrapper .wrapper .content .primaryContent .header .sub {
+  font-size: 16px;
+  color: #444;
+  font-weight: 600;
+  margin-top: 20px;
+}
 .layoutWrapper > .alertPage .innerWrapper .wrapper .content .primaryContent .header hr {
   border-top: 2px solid white;
   height: 2px;
