--- a/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
@@ -114,9 +114,13 @@
 
 	<!-- IDE -->
 	@Styles.Render("~/Content/ide/codemirror.css")
+	@Styles.Render("~/Content/ide/dialog.css")
 	@Scripts.Render("~/Scripts/ide/codemirror.js")
 	@Scripts.Render("~/Scripts/ide/mode/wumboscript.js")
 	@Scripts.Render("~/Scripts/ide/addons/active-line.js")
+	@Scripts.Render("~/Scripts/ide/addons/dialog.js")
+	@Scripts.Render("~/Scripts/ide/addons/searchcursor.js")
+	@Scripts.Render("~/Scripts/ide/addons/search.js")
 	@Styles.Render("~/Content/ide/theme/onyx.css")
 
 	<!-- Add Angular -->
