added signin page

--- a/Onyx/Onyx.Cartographer/Content/application.scss
+++ b/Onyx/Onyx.Cartographer/Content/application.scss
@@ -4,6 +4,8 @@
 @import "shared/css_fixes";
 @import "shared/inputs";
 
+@import "pages/signin/index";
+
 @import "pages/base";
 @import "pages/sidebar";
 @import "pages/scrollable_content";
