--- a/Onyx/Onyx.Cartographer/Views/Home/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Home/Index.cshtml
@@ -1,3 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Onyx";  
+	Layout = "~/Views/Shared/_AltLayout.cshtml";
+	ViewBag.Title = "Onyx - Signin";
 }
+
+<div>
+	<input value="adsf" />
+</div>
