Removed Angular, did some other stuff. Think I know how Onyx will be structured now.

--- a/Onyx/Onyx.Cartographer/Views/Home/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Home/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@{
-	Layout = "~/Views/Shared/_AltLayout.cshtml";
-	ViewBag.Title = "Onyx - Signin";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Onyx - Halo Gametype Editor";
+    ViewBag.VM_Home = "selected";
 }
-
-<div>
-	<input value="adsf" />
-</div>
