Updated XboxInternals, and moved XboxInternals and XDM into subfolders for cleaness. Updated refrences to those things.

--- a/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
@@ -139,10 +139,10 @@
 	@Scripts.Render("~/Scripts/util/modal_manager.js")
 
     <!-- Xbox Data Manager -->
-    @Scripts.Render("~/Scripts/libs/xdm.js")
+    @Scripts.Render("~/Scripts/libs/xdm/xdm.js")
 
     <!-- Xbox Internals (woo, STFS!) -->
-    @Scripts.Render("~/Scripts/libs/XboxInternals.js")	
+    @Scripts.Render("~/Scripts/libs/xbox_internals/XboxInternals.js")	
 	@RenderSection("scripts", required: false)
 
 	<script>
