Moved the JS only used to create gametypes, into the Create/Index cshtml

--- a/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
@@ -9,3 +9,28 @@
         Drag and Drop a gametype
     </span>
 </div>
+
+<!-- Utilities -->
+@Scripts.Render("~/Scripts/util/events.js")
+@Scripts.Render("~/Scripts/util/functions.js")
+
+<!-- IDE -->
+@Styles.Render("~/Content/ide/codemirror.css")
+@Styles.Render("~/Content/ide/dialog.css")
+@Scripts.Render("~/Scripts/ide/codemirror.js")
+@Scripts.Render("~/Scripts/ide/mode/wumboscript.js")
+@Scripts.Render("~/Scripts/ide/addons/active-line.js")
+@Scripts.Render("~/Scripts/ide/addons/dialog.js")
+@Scripts.Render("~/Scripts/ide/addons/searchcursor.js")
+@Scripts.Render("~/Scripts/ide/addons/search.js")
+@Scripts.Render("~/Scripts/ide/addons/match-highlighter.js")
+@Styles.Render("~/Content/ide/theme/onyx.css")
+
+<!-- Cartographer -->
+@Scripts.Render("~/Scripts/cartographer/cartographer.js")
+
+<!-- Xbox Data Manager -->
+@Scripts.Render("~/Scripts/libs/xdm/xdm.js")
+
+<!-- Xbox Internals (woo, STFS!) -->
+@Scripts.Render("~/Scripts/libs/xbox_internals/XboxInternals.js")
