--- a/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>@ViewBag.Title - Editor</title>
+	<title>@ViewBag.Title</title>
 	@Styles.Render("~/Content/reset.css")
 	@Styles.Render("~/Content/application.css")
 	@Scripts.Render("~/bundles/modernizr")
