gametype script viewing is back, just placeholder

--- a/Onyx/Onyx.Cartographer/Views/About/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/About/Index.cshtml
@@ -24,6 +24,13 @@
                 </ul>
             </div>
 
+            <div class="testers researchers">
+                <h2>Researchers:</h2>
+                <ul>
+                    <li>Lord Zedd</li>
+                </ul>
+            </div>
+
             <div class="testers">
                 <h2>Testers:</h2>
                 <ul>
