--- a/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
@@ -10,6 +10,55 @@
     </span>
 </div>
 
+<div id="gamesaveModify" style="display: none;">
+    <h1>
+        Modify Gamesave
+    </h1>
+
+    <ul class="nav-tabs">
+        <li><span>STFS Package Data</span></li>
+        <li><span>Metadata</span></li>
+        <li class="active"><span>Script Data</span></li>
+    </ul>
+    <div class="viewData">
+        <div class="stfsPackageData">
+
+        </div>
+        <div class="metaData">
+
+        </div>
+        <div class="scriptData">
+            <textarea id="scriptmod" name="code" style="display: none;"></textarea>
+        </div>
+    </div>
+</div>
+
+<style>
+    .nav-tabs {
+        cursor: pointer;
+        list-style-type: none;
+        color: white;
+        padding: 0px;
+        margin: 15px 0 20px 0;
+    }
+
+        .nav-tabs > li {
+            margin-right: 5px;
+            margin-bottom: -1px;
+            float: left;
+            padding: 0.7em;
+            background-color: #1298de;
+        }
+
+            .nav-tabs > li.active {
+                background-color: #22b3ff;
+            }
+
+    .viewData {
+        margin: 80px 0 0 0;
+    }
+</style>
+
 <!-- Utilities -->
 @Scripts.Render("~/Scripts/util/events.js")
 @Scripts.Render("~/Scripts/util/functions.js")
