Sigin working, with some nice stuff

--- a/Onyx/Onyx.Cartographer/Content/application.css
+++ b/Onyx/Onyx.Cartographer/Content/application.css
@@ -478,6 +478,9 @@ h1 {
 #aboutContainer .credits .developersAndTesters {
   float: left;
 }
+#aboutContainer .credits .developersAndTesters .researchers {
+  margin-top: 20px;
+}
 #aboutContainer .credits .developersAndTesters .testers {
   margin-top: 20px;
 }
