--- a/Onyx/Onyx.Cartographer/Content/pages/about/_index.scss
+++ b/Onyx/Onyx.Cartographer/Content/pages/about/_index.scss
@@ -6,6 +6,10 @@
 		.developersAndTesters {
 			float: left;
 
+			.researchers {
+				margin-top: 20px;
+			}
+
 			.testers {
 				margin-top: 20px;
 			}
