--- a/Onyx/Onyx.Cartographer/Views/About/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/About/Index.cshtml
@@ -24,7 +24,7 @@
                 </ul>
             </div>
 
-            <div class="testers researchers">
+            <div class="researchers">
                 <h2>Researchers:</h2>
                 <ul>
                     <li>Lord Zedd</li>
