Updated Welcome page content

--- a/Onyx/Onyx.Cartographer/Views/Welcome/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Welcome/Index.cshtml
@@ -3,6 +3,8 @@
 	ViewBag.Title = "Onyx - Welcome";
 }
 
-<strong>Welcome to Onyx</strong>
-<hr />
-welcome to onyxxxxxx
+<span class="header">
+    <strong>Project Onyx</strong>
+    <hr />
+    We're not quite ready to talk about this yet, but keep a eye out.
+</span>
