--- a/Onyx/Onyx.Cartographer/Areas/AdminCP/Views/Hub/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Areas/AdminCP/Views/Hub/Index.cshtml
@@ -1,7 +1,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Areas/AdminCP/Views/Shared/_AdminLayout.cshtml";
+    ViewBag.VM_Hub = "selected";
 }
 
 <h2>Hub</h2>
