--- a/Onyx/Onyx.Cartographer/Content/application.scss
+++ b/Onyx/Onyx.Cartographer/Content/application.scss
@@ -3,6 +3,7 @@
 @import "shared/tags";
 @import "shared/css_fixes";
 @import "shared/inputs";
+@import "shared/tables";
 
 @import "pages/signin/index";
 
