--- a/Onyx/Onyx.Cartographer/Views/Account/Signin.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Account/Signin.cshtml
@@ -1,4 +1,4 @@
-﻿@model Onyx.Cartographer.Models.User
+﻿@model Onyx.Cartographer.ViewModels.User.SignIn
 @{
 	Layout = "~/Views/Shared/_AltLayout.cshtml";
 	ViewBag.Title = "Onyx - Sign In";
