--- a/Onyx/Onyx.Cartographer/Content/application.scss
+++ b/Onyx/Onyx.Cartographer/Content/application.scss
@@ -13,6 +13,8 @@
 @import "pages/home";
 @import "pages/modals";
 
+@import "pages/admincp/header";
+
 @import "pages/create/index";
 @import "pages/create/modify";
 
