--- a/Onyx/Onyx.Cartographer/Areas/AdminCP/Views/Users/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Areas/AdminCP/Views/Users/Index.cshtml
@@ -1,24 +1,27 @@
 @model IEnumerable<Onyx.Cartographer.Models.User>
-
 @{
-    ViewBag.Title = "View Users";
+    ViewBag.Title = "View All Users";
     ViewBag.VM_User = "selected";
 }
-
-<h2>View All Users</h2>
 
 <table class="table">
     <thead>
         <tr>
-            <td>
+            <th>
                 Username
-            </td>
-            <td>
+            </th>
+            <th>
                 Email
-            </td>
-            <td>
+            </th>
+            <th>
+                Role
+            </th>
+            <th>
                 Registered Date
-            </td>
+            </th>
+            <th>
+                Actions
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -32,12 +35,19 @@
                     @user.Email
                 </td>
                 <td>
+                    <span style="color: #@user.Role.VisualColour">@user.Role.Name</span>
+                </td>
+                <td>
                     @user.RegisterDate
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", "Users", new { user.Id }, new { } )
+                    |                    
+                    @Html.ActionLink("Delete", "Delete", "Users", new { user.Id }, new { })
                 </td>
             </tr>
         }
     </tbody>
 </table>
+<br />
+@Html.ActionLinkButton("Add User", "Add", "Users", "AdminCP")
