--- a/Onyx/Onyx.Cartographer/Content/shared/_tables.scss
+++ b/Onyx/Onyx.Cartographer/Content/shared/_tables.scss
@@ -2,7 +2,7 @@
 -----------------------------------------------------------*/
 .table {
     background: #ebebeb;
-    border: 1px solid #EAEAEA;
+    border: 1px solid #d8d8d8;
     border-bottom: none;
     border-collapse: separate;
     border-spacing: 0;
