passwurd box for passwurds

--- a/Onyx/Onyx.Cartographer/Areas/AdminCP/Views/Users/Edit.cshtml
+++ b/Onyx/Onyx.Cartographer/Areas/AdminCP/Views/Users/Edit.cshtml
@@ -31,7 +31,7 @@
     <p>
         @Html.LabelFor(m => m.Password)
         <br />
-        @Html.TextBoxFor(m => m.Password)
+        @Html.PasswordFor(m => m.Password)
         <span class="error">@Html.ValidationMessageFor(m => m.Password)</span>
     </p>
     
