--- a/Onyx/Onyx.Cartographer/Areas/AdminCP/Views/Users/Edit.cshtml
+++ b/Onyx/Onyx.Cartographer/Areas/AdminCP/Views/Users/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Collections
-@using System.Globalization
+﻿@using System.Globalization
 @using Onyx.Cartographer.Models
 @model Onyx.Cartographer.ViewModels.User.UserAdminEdit
 
@@ -7,8 +6,6 @@
     ViewBag.Title = "Edit User - " + Model.Username;
     ViewBag.VM_User = "selected";
 }
-
-<h2>Edit User - @Model.Username</h2>
 
 @using (Html.BeginForm())
 {
