--- a/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Onyx.Cartographer.Extensions
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -10,6 +11,10 @@
 	
 	<!-- jquerty -->
 	@Scripts.Render("~/bundles/jquery")
+    
+    @{
+        var currentUser = Helpers.GetAuthenticatedUser();
+    }
 </head>
 
 <body>
@@ -48,11 +53,18 @@
 				<div>Onyx Version: <span>0.1 {pa}</span></div>
 			</div>
 		</div>
-		<div id="scrollableContentContainer" class="layoutFluidRightSection">
-			<div class="mainPageContent">			
-				@RenderBody()
-			</div>
-		</div>
+	    <div id="scrollableContentContainer" class="layoutFluidRightSection">
+	        @if (currentUser != null)
+	        {
+	            <div class="user-header">
+	                signed in yo
+	            </div>
+	        }
+
+	        <div class="mainPageContent">			
+	            @RenderBody()
+	        </div>
+	    </div>
 
 		<div id="modalMask"></div>
 		<div id="pendingMask"></div>
